--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-     <!-- Spinner Start -->
+    <!-- Spinner Start -->
 <div id="spinner"
      class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
     <div class="spinner-grow text-warning" style="width: 3rem; height: 3rem;" role="status">
@@ -144,6 +144,53 @@
         ×
     </a>
 
+ <!-- ===== SIDEBAR LOGO ===== -->
+<div style="
+    text-align:center;
+    margin-bottom:50px;
+    position:relative;
+    z-index:2;
+">
+  <span style="
+    font-size:40px;
+    font-weight:900;
+    letter-spacing:6px;
+    background: linear-gradient(45deg, #ffca1a, #000, #ffd700, #000);
+    background-size:400% 400%;
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    display:inline-block;
+    animation:logoGradient 4s ease infinite;
+    text-shadow:
+        0 0 10px rgba(255,202,26,0.7),
+        0 0 20px rgba(0,0,0,0.5),
+        0 0 30px rgba(255,255,255,0.3);
+    transform: rotateX(3deg) rotateY(2deg);
+  ">
+    SAFA'z
+  </span>
+</div>
+
+<style>
+@keyframes logoGradient {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
+</style>
+
+<!-- ===== MENU TITLE ===== -->
+<div style="
+    text-align:center;
+    font-size:26px;
+    font-weight:900;
+    color:#ffca1a;
+    letter-spacing:2px;
+    margin-bottom:30px;
+    text-shadow:0 0 5px #000, 0 0 10px #ffca1a;
+    animation:menuGlow 2s ease-in-out infinite alternate;
+">MENU</div>
+ 
    <!-- Menu Links -->
 <a href="index.html" style="
     display:block;
@@ -1327,6 +1374,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
