--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div style="display: flex; align-items: center; gap: 10px;">
           <h2 style="
             font-family: 'Great Vibes', cursive;
-            font-size: 1.2rem;
+            font-size: 2.2rem;
             margin: 0;
             font-weight: 800;
             color: #ffca1a;
@@ -101,6 +101,8 @@
             -webkit-text-fill-color: transparent;
             text-shadow: 2px 2px 8px rgba(0,0,0,0.35), 0 0 12px rgba(255,215,0,0.6);
             letter-spacing: 1px;
+              right-padding: 10px;
+              position:center;
         ">
             SAFA'<span style="font-size:0.65em; vertical-align: middle;">Z</span>
         </h2>
@@ -1424,6 +1426,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
