--- a/index.html
+++ b/index.html
@@ -90,22 +90,26 @@
 
     <!-- Logo + Text -->
     <div style="display: flex; align-items: center; gap: 10px;">
-          <h2 style="
-            font-family: 'Great Vibes', cursive;
-            font-size: 2.2rem;
-            margin: 0;
-            font-weight: 800;
-            color: #ffca1a;
-            background: linear-gradient(45deg, #ffd700, #ffcc33);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 2px 2px 8px rgba(0,0,0,0.35), 0 0 12px rgba(255,215,0,0.6);
-            letter-spacing: 1px;
-              right-padding: 10px;
-              position:center;
-        ">
-            SAFA'<span style="font-size:0.65em; vertical-align: middle;">Z</span>
-        </h2>
+    <h2 style="
+    font-family: 'Great Vibes', cursive;
+    font-size: 2.2rem;
+    margin: 0;
+    font-weight: 800;
+    color: #ffca1a;
+    background: linear-gradient(45deg, #ffd700, #ffcc33);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.35), 0 0 12px rgba(255,215,0,0.6);
+    letter-spacing: 1px;
+    padding-right: 10px; /* Corrected */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100vh; /* Centers vertically */
+">
+    SAFA'<span style="font-size:0.65em; vertical-align: middle;">Z</span>
+</h2>
         <img src="logo.jpg" alt="Logo" style="height: 60px; width: auto; border-radius:12px; box-shadow:0 0 15px rgba(255,202,26,0.7);" />
       
     </div>
@@ -1426,6 +1430,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
