--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
     <!-- Logo + Text -->
     <div style="display: flex; align-items: center; gap: 10px;">
-    <h2 style="
+  <h2 style="
     font-family: 'Great Vibes', cursive;
     font-size: 2.2rem;
-    margin: 0;
+    margin: 0 auto; /* Center horizontally */
     font-weight: 800;
     color: #ffca1a;
     background: linear-gradient(45deg, #ffd700, #ffcc33);
@@ -102,11 +102,7 @@
     text-shadow: 2px 2px 8px rgba(0,0,0,0.35), 0 0 12px rgba(255,215,0,0.6);
     letter-spacing: 1px;
     padding-right: 10px; /* Corrected */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 100vh; /* Centers vertically */
+    text-align: center; /* Center text within the element */
 ">
     SAFA'<span style="font-size:0.65em; vertical-align: middle;">Z</span>
 </h2>
@@ -1430,6 +1426,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
