--- a/index.html
+++ b/index.html
@@ -358,13 +358,13 @@ document.addEventListener("DOMContentLoaded", () => {
             <div class="col-12 col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
                 <h3 class="fw-light" style="color: white; animation: slideInRight;">Natural & Organic</h3>
                 <h1 class="display-4" style="color: white; animation: slideInRight;">
-                    Hair <span class="fw-light" style="color: #333;">Shampoo</span> For Healthy Hair
+                    Hair <span class="fw-light" style="color:black;">Shampoo</span> For Healthy Hair
                 </h1>
                 <p style="color: white; margin-bottom: 1rem; animation: slideInRight;">
                    Magnis dis parturient montes.
                 </p>
-                <a href="" class="btn btn-dark py-2 px-4 me-2" style="animation: slideInRight;">Shop Now</a>
-                <a href="" class="btn btn-outline-dark py-2 px-4" style="animation: slideInRight;">Contact Us</a>
+                <a href="" class="btn btn-dark py-2 px-4 me-2" style="animation: slideInRight; color:black;">Shop Now</a>
+                <a href="" class="btn btn-outline-dark py-2 px-4" style="animation: slideInRight;color:black;">Contact Us</a>
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 300px; object-fit: cover;">
@@ -1426,6 +1426,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
