--- a/index.html
+++ b/index.html
@@ -363,8 +363,11 @@ document.addEventListener("DOMContentLoaded", () => {
                 <p style="color: white; margin-bottom: 1rem; animation: slideInRight;">
                    Magnis dis parturient montes.
                 </p>
-                <a href="" class="btn btn-dark py-2 px-4 me-2" style="animation: slideInRight; color:black;">Shop Now</a>
-                <a href="" class="btn btn-outline-dark py-2 px-4" style="animation: slideInRight;color:black;">Contact Us</a>
+               <a href="" class="btn py-2 px-4 me-2" 
+   style="background-color: #ffe880; color: black; border: 2px solid black; border-radius: 6px; animation: slideInRight 1s;">Shop Now</a>
+
+<a href="" class="btn py-2 px-4" 
+   style="background-color: transparent; color: black; border: 2px solid black; border-radius: 6px; animation: slideInRight 1s;">Contact Us</a>
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 300px; object-fit: cover;">
