--- a/index.html
+++ b/index.html
@@ -363,47 +363,61 @@ document.addEventListener("DOMContentLoaded", () => {
                 <p style="color: white; margin-bottom: 1rem; animation: slideInRight;">
                    Magnis dis parturient montes.
                 </p>
-<a href="" class="btn py-2 px-5 me-2" 
-   style="
-       background: linear-gradient(135deg, #ffeb6a, #ffd700);
-       color: #000;
-       font-weight: bold;
-       font-family: 'Times New Roman', serif;
-       font-size: 16px;
-       border: 2px solid #000;
-       border-radius: 8px;
-       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-       transition: all 0.3s ease;
-       animation: slideInRight 1s;
-       text-transform: uppercase;
-       letter-spacing: 1px;
-   "
-   onmouseover="this.style.background='linear-gradient(135deg, #ffd700, #ffeb6a)'; this.style.boxShadow='0 6px 18px rgba(0,0,0,0.4)';"
-   onmouseout="this.style.background='linear-gradient(135deg, #ffeb6a, #ffd700)'; this.style.boxShadow='0 4px 12px rgba(0,0,0,0.3)';"
->
-   Shop Now
-</a>
+<div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 20px; flex-wrap: wrap;">
+  
+  <!-- Shop Now Button -->
+  <a href="" 
+     style="
+         display: inline-block;
+         padding: 12px 30px;
+         background: linear-gradient(145deg, #ffec70, #ffd700);
+         color: #1a1a1a;
+         font-family: 'Times New Roman', serif;
+         font-weight: 700;
+         font-size: 16px;
+         text-transform: uppercase;
+         letter-spacing: 1.5px;
+         border: 2px solid #1a1a1a;
+         border-radius: 10px;
+         box-shadow: 0 6px 20px rgba(0,0,0,0.35), inset 0 -2px 0 rgba(255,255,255,0.3);
+         transition: all 0.4s ease;
+         animation: slideInRight 1s;
+         cursor: pointer;
+         text-decoration: none;
+     "
+     onmouseover="this.style.background='linear-gradient(145deg, #ffd700, #ffec70)'; this.style.boxShadow='0 8px 25px rgba(0,0,0,0.45), inset 0 -2px 0 rgba(255,255,255,0.4)'; this.style.transform='translateY(-2px)';"
+     onmouseout="this.style.background='linear-gradient(145deg, #ffec70, #ffd700)'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.35), inset 0 -2px 0 rgba(255,255,255,0.3)'; this.style.transform='translateY(0)';"
+  >
+     Shop Now
+  </a>
 
-<a href="" class="btn py-2 px-5" 
-   style="
-       background: transparent;
-       color: #000;
-       font-weight: bold;
-       font-family: 'Times New Roman', serif;
-       font-size: 16px;
-       border: 2px solid #000;
-       border-radius: 8px;
-       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-       transition: all 0.3s ease;
-       animation: slideInRight 1s;
-       text-transform: uppercase;
-       letter-spacing: 1px;
-   "
-   onmouseover="this.style.background='#ffe880'; this.style.boxShadow='0 6px 18px rgba(0,0,0,0.3)';"
-   onmouseout="this.style.background='transparent'; this.style.boxShadow='0 4px 12px rgba(0,0,0,0.2)';"
->
-   Contact Us
-</a>
+  <!-- Contact Us Button -->
+  <a href="" 
+     style="
+         display: inline-block;
+         padding: 12px 30px;
+         background: #1a1a1a;
+         color: #ffd700;
+         font-family: 'Times New Roman', serif;
+         font-weight: 700;
+         font-size: 16px;
+         text-transform: uppercase;
+         letter-spacing: 1.5px;
+         border: 2px solid #ffd700;
+         border-radius: 10px;
+         box-shadow: 0 6px 20px rgba(0,0,0,0.35), inset 0 -2px 0 rgba(255,255,255,0.1);
+         transition: all 0.4s ease;
+         animation: slideInRight 1s;
+         cursor: pointer;
+         text-decoration: none;
+     "
+     onmouseover="this.style.background='#ffd700'; this.style.color='#1a1a1a'; this.style.boxShadow='0 8px 25px rgba(0,0,0,0.45), inset 0 -2px 0 rgba(255,255,255,0.2)'; this.style.transform='translateY(-2px)';"
+     onmouseout="this.style.background='#1a1a1a'; this.style.color='#ffd700'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.35), inset 0 -2px 0 rgba(255,255,255,0.1)'; this.style.transform='translateY(0)';"
+  >
+     Contact Us
+  </a>
+
+</div>
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 300px; object-fit: cover;">
@@ -1465,6 +1479,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
