--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ document.addEventListener("DOMContentLoaded", () => {
      style="
          display: inline-block;
          padding: 12px 30px;
-         background: linear-gradient(145deg, #ffec70, #ffd700);
+         background: linear-gradient(145deg, #ffca1a, #ffca1a);
          color: #1a1a1a;
          font-family: 'Times New Roman', serif;
          font-weight: 700;
@@ -397,13 +397,13 @@ document.addEventListener("DOMContentLoaded", () => {
          display: inline-block;
          padding: 12px 30px;
          background: #1a1a1a;
-         color: #ffd700;
+         color: #ffca1a;
          font-family: 'Times New Roman', serif;
          font-weight: 700;
          font-size: 16px;
          text-transform: uppercase;
          letter-spacing: 1.5px;
-         border: 2px solid #ffd700;
+         border: 2px solid #ffca1a;
          border-radius: 10px;
          box-shadow: 0 6px 20px rgba(0,0,0,0.35), inset 0 -2px 0 rgba(255,255,255,0.1);
          transition: all 0.4s ease;
@@ -1479,6 +1479,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
