--- a/index.html
+++ b/index.html
@@ -348,6 +348,72 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
+<!-- Moving Text Section Begin -->
+<section style="background: #1a1a1a; overflow: hidden; position: relative; border-top: 3px solid #ffd700; border-bottom: 3px solid #ffd700; padding: 12px 0;">
+    
+    <div style="position: relative; width: 100%; overflow: hidden; border-radius: 6px; border: 2px solid #ffd700; background: rgba(255,215,0,0.05); box-shadow: 0 0 15px rgba(255,215,0,0.4);">
+
+        <!-- Shiny overlay -->
+        <div style="
+            position: absolute;
+            top: 0; left: -50%;
+            width: 50%;
+            height: 100%;
+            background: linear-gradient(120deg, rgba(255,255,255,0.3), rgba(255,255,0,0.8), rgba(255,255,255,0.3));
+            transform: skewX(-25deg);
+            animation: shine 6s linear infinite;
+            pointer-events: none;
+        "></div>
+
+        <!-- Scrolling Text -->
+        <div style="
+            display: inline-block;
+            white-space: nowrap;
+            animation: moveText 90s linear infinite;
+            font-family: 'Times New Roman', serif;
+            font-weight: bold;
+            font-size: 18px;
+            color: #fff;
+            padding: 10px 20px;
+            text-shadow: 0 0 5px #ffd700, 0 0 10px #ffec70;
+        ">
+           🚚✨ Enjoy free delivery on all orders over 3,000 PKR.
+
+🕌🎊 The Eid Sale is live – grab your favorites with up to 30% off!
+
+💎🌟 Experience premium skincare with instant results, only at SAFA’Z.
+
+🌸💧 Treat yourself to luxury skincare for a brighter, healthier you.
+
+☀️💦✨ Let your skin brighten, hydrate, and shine – results you’ll see immediately.
+
+💛🛍️ Discover amazing prices that you’ll truly love.
+🌺🔥 Say goodbye to dull skin.
+🌿 Anti-aging & rejuvenating creams.
+        </div>
+
+    </div>
+</section>
+
+<style>
+@keyframes moveText {
+    0% { transform: translateX(10%); }   /* Start offscreen right */
+    100% { transform: translateX(-100%); } /* Move fully left */
+}
+
+@keyframes shine {
+    0% { left: -50%; }
+    100% { left: 100%; }
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+    div[style*="white-space: nowrap;"] {
+        font-size: 16px;
+        padding: 8px 15px;
+    }
+}
+</style>
 
 
 
@@ -1479,6 +1545,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
