--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <style>
 @keyframes moveText {
-    0% { transform: translateX(10%); }   /* Start offscreen right */
+    0% { transform: translateX(40%); }   /* Start offscreen right */
     100% { transform: translateX(-100%); } /* Move fully left */
 }
 
@@ -417,19 +417,19 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-  <!-- Hero Start -->
+<!-- Hero Start -->
 <div class="container-fluid" style="background-color: #ffe880; padding: 2rem 0;">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-12 col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
-                <h3 class="fw-light" style="color: white; animation: slideInRight;">Natural & Organic</h3>
+                <h3 class="fw-light" style="color: white; animation: slideInRight;">Premium & Effective</h3>
                 <h1 class="display-4" style="color: white; animation: slideInRight;">
-                    Hair <span class="fw-light" style="color:black;">Shampoo</span> For Healthy Hair
+                    Skincare <span class="fw-light" style="color:black;">Solutions</span> For Radiant Skin
                 </h1>
                 <p style="color: white; margin-bottom: 1rem; animation: slideInRight;">
-                   Magnis dis parturient montes.
+                   Whitening Cream, Serums, Skin Shiner & Skin Polish
                 </p>
-<div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 20px; flex-wrap: wrap;">
+                <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 20px; flex-wrap: wrap;">
   
   <!-- Shop Now Button -->
   <a href="" 
@@ -1545,6 +1545,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
