--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@ document.addEventListener("DOMContentLoaded", () => {
 <!-- Feature Start -->
 <div class="container-fluid py-5 overflow-hidden">
     <div class="container text-center">
-        <h1 class="mb-4" style="color: #ffe880;">
+        <h1 class="mb-4" style="color: #ffe880; margin-top:0; margin-bottom:0.5rem;">
             <span class="fw-light text-dark">Best Selling Product</span>  24K Gold Skin Polish
         </h1>
 
@@ -1545,6 +1545,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
