--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 20px; flex-wrap: wrap;">
   
   <!-- Shop Now Button -->
-  <a href="" 
+  <a href="product.html" 
      style="
          display: inline-block;
          padding: 12px 30px;
@@ -1545,6 +1545,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
