--- a/product.html
+++ b/product.html
@@ -447,7 +447,251 @@ document.addEventListener("DOMContentLoaded", () => {
       <option value="Online Payment">Online Payment</option>
     </select>
 
-    <button class="completeOrderBtn" onclick="sendToWhatsApp()">Complete Order</button>
+    <!-- Premium Complete Order Button -->
+<button class="completeOrderBtn" onclick="showModal()" 
+style="
+background: linear-gradient(135deg,#ffca1a,#ff9800);
+color:#000;
+border:none;
+padding:14px 18px;
+font-size:16px;
+font-weight:700;
+cursor:pointer;
+border-radius:16px;
+margin-top:12px;
+box-shadow:0 10px 25px rgba(255,165,0,0.4);
+transition:0.3s ease;
+width:100%;
+max-width:320px;
+display:block;
+margin-left:auto;
+margin-right:auto;
+letter-spacing:0.5px;
+">
+✨ Complete Order
+</button>
+
+<!-- Premium Modal -->
+<div id="modal" 
+style="
+display:none;
+position:fixed;
+z-index:9999;
+left:0;
+top:0;
+width:100%;
+height:100%;
+background:rgba(0,0,0,0.65);
+backdrop-filter:blur(8px);
+justify-content:center;
+align-items:center;
+padding:15px;
+">
+
+<div id="modal-content"
+style="
+background:linear-gradient(145deg,#ffffff,#f9f9ff);
+width:100%;
+max-width:420px;
+border-radius:22px;
+padding:24px;
+box-shadow:0 25px 50px rgba(0,0,0,0.25);
+position:relative;
+font-family:Arial, sans-serif;
+animation:fadeSlide 0.35s ease;
+">
+
+<!-- Close Button -->
+<span onclick="closeModal()" 
+style="
+position:absolute;
+top:14px;
+right:16px;
+background:#ffe0e0;
+color:#d60000;
+width:34px;
+height:34px;
+border-radius:50%;
+display:flex;
+align-items:center;
+justify-content:center;
+font-size:18px;
+font-weight:bold;
+cursor:pointer;
+box-shadow:0 4px 10px rgba(0,0,0,0.15);
+">×</span>
+
+<h3 style="
+margin-bottom:22px;
+font-size:21px;
+font-weight:800;
+text-align:center;
+color:#222;
+">
+💬 Place your order to any one of them !
+</h3>
+
+<!-- Contact 1 -->
+<div style="
+display:flex;
+align-items:flex-start;
+background:linear-gradient(135deg,#fff7e0,#fff1c2);
+padding:16px;
+border-radius:18px;
+margin-bottom:18px;
+box-shadow:0 8px 18px rgba(0,0,0,0.08);
+border:1px solid #ffe6a3;
+">
+
+<img src="safa.jpg" alt="Safa Butt"
+style="
+width:65px;
+height:65px;
+border-radius:50%;
+object-fit:cover;
+margin-right:14px;
+border:3px solid #ffca1a;
+">
+
+<div style="flex:1;">
+<h4 style="margin:0;font-size:17px;font-weight:700;color:#222;">
+Safa Butt 
+<span style="
+background:#28a745;
+color:white;
+font-size:11px;
+padding:3px 8px;
+border-radius:20px;
+margin-left:6px;
+font-weight:600;
+">Available</span>
+</h4>
+
+<p style="margin:6px 0 6px;font-size:13px;color:#444;font-weight:600;">
+Customer Services Manager
+</p>
+
+<p style="margin:0 0 10px;font-size:13px;color:#666;line-height:1.4;">
+Friendly and responsive support expert, helping customers quickly complete their orders smoothly.
+</p>
+
+<button onclick="sendToWhatsApp('+923314889416')" 
+style="
+background:linear-gradient(135deg,#25D366,#1ebe5d);
+color:white;
+border:none;
+padding:9px 12px;
+font-size:13px;
+border-radius:10px;
+cursor:pointer;
+font-weight:600;
+width:100%;
+box-shadow:0 5px 12px rgba(37,211,102,0.4);
+">
+Place Order
+</button>
+</div>
+</div>
+
+<!-- Contact 2 -->
+<div style="
+display:flex;
+align-items:flex-start;
+background:linear-gradient(135deg,#e8f0ff,#d6e4ff);
+padding:16px;
+border-radius:18px;
+box-shadow:0 8px 18px rgba(0,0,0,0.08);
+border:1px solid #c6d8ff;
+">
+
+<img src="feroz.jpg" alt="Feroz Ejaz Butt"
+style="
+width:65px;
+height:65px;
+border-radius:50%;
+object-fit:cover;
+margin-right:14px;
+border:3px solid #4a90ff;
+">
+
+<div style="flex:1;">
+<h4 style="margin:0;font-size:17px;font-weight:700;color:#222;">
+Feroz Ejaz Butt 
+<span style="
+background:#ff9800;
+color:white;
+font-size:11px;
+padding:3px 8px;
+border-radius:20px;
+margin-left:6px;
+font-weight:600;
+">Online</span>
+</h4>
+
+<p style="margin:6px 0 6px;font-size:13px;color:#444;font-weight:600;">
+Customer Services Specialist
+</p>
+
+<p style="margin:0 0 10px;font-size:13px;color:#666;line-height:1.4;">
+Order handling specialist ensuring fast responses and smooth checkout assistance.
+</p>
+
+<button onclick="sendToWhatsApp('+923493000195')" 
+style="
+background:linear-gradient(135deg,#25D366,#1ebe5d);
+color:white;
+border:none;
+padding:9px 12px;
+font-size:13px;
+border-radius:10px;
+cursor:pointer;
+font-weight:600;
+width:100%;
+box-shadow:0 5px 12px rgba(37,211,102,0.4);
+">
+Place Order
+</button>
+</div>
+</div>
+
+</div>
+</div>
+
+<script>
+// Function to show the contact options modal
+function showModal() {
+    document.getElementById('modal').style.display = 'flex';
+}
+
+// Function to close the contact options modal
+function closeModal() {
+    document.getElementById('modal').style.display = 'none';
+}
+
+// Function to send a message via WhatsApp
+function sendToWhatsApp(phone) {
+    const message = "Your order message here.";
+    const whatsappURL = "https://wa.me/" + phone + "?text=" + encodeURIComponent(message);
+    window.open(whatsappURL, "_blank");
+    closeModal();
+}
+
+// Close modal when clicking outside
+window.onclick = function(event) {
+    if (event.target == document.getElementById('modal')) {
+        closeModal();
+    }
+};
+
+// Animation
+const style = document.createElement('style');
+style.innerHTML = `
+@keyframes fadeSlide {
+from {opacity:0; transform:translateY(20px);}
+to {opacity:1; transform:translateY(0);}
+}`;
+document.head.appendChild(style);
+</script>
   </div>
 </div>
 <!-- THANK YOU POPUP -->
@@ -1133,8 +1377,16 @@ window.addEventListener("click", function(e) {
         closeThankYou();
     }
 });
-  let whatsappURL="https://wa.me/923493000195?text="+encodeURIComponent(message);
-  window.open(whatsappURL,"_blank");
+
+// For Safa
+let safaPhone = "+923314889416"; // Update this number if needed
+let safaWhatsAppURL = "https://wa.me/" + safaPhone + "?text=" + encodeURIComponent(message);
+window.open(safaWhatsAppURL, "_blank");
+
+// For Feroz
+let ferozPhone = "+923493000195"; // Update this number if needed
+let ferozWhatsAppURL = "https://wa.me/" + ferozPhone + "?text=" + encodeURIComponent(message);
+window.open(ferozWhatsAppURL, "_blank");
 
 
   
