--- a/product.html
+++ b/product.html
@@ -528,7 +528,7 @@ font-weight:800;
 text-align:center;
 color:#222;
 ">
-💬 Place your order to any one of them !
+💬 Choose any one of them!
 </h3>
 
 <!-- Contact 1 -->
@@ -1379,7 +1379,7 @@ window.addEventListener("click", function(e) {
 });
 
 // For Safa
-let safaPhone = "+923314889416"; // Update this number if needed
+let safaPhone = "+923364454964"; // Update this number if needed
 let safaWhatsAppURL = "https://wa.me/" + safaPhone + "?text=" + encodeURIComponent(message);
 window.open(safaWhatsAppURL, "_blank");
 
