--- a/product.html
+++ b/product.html
@@ -528,7 +528,7 @@ font-weight:800;
 text-align:center;
 color:#222;
 ">
-💬 Choose any one of them!
+💬 Place your order to any one of them !
 </h3>
 
 <!-- Contact 1 -->
@@ -1664,4 +1664,3 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
-
