--- a/product.html
+++ b/product.html
@@ -500,25 +500,24 @@ position:relative;
 font-family:Arial, sans-serif;
 animation:fadeSlide 0.35s ease;
 ">
-
 <!-- Close Button -->
-<span onclick="closeModal()" 
+<span onclick="document.getElementById('modal').style.display='none';" 
 style="
-position:absolute;
-top:14px;
-right:16px;
-background:#ffe0e0;
-color:#d60000;
-width:34px;
-height:34px;
-border-radius:50%;
-display:flex;
-align-items:center;
-justify-content:center;
-font-size:18px;
-font-weight:bold;
-cursor:pointer;
-box-shadow:0 4px 10px rgba(0,0,0,0.15);
+position: absolute;
+top: 14px;
+right: 16px;
+background: #ffe0e0;
+color: #d60000;
+width: 34px;
+height: 34px;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 18px;
+font-weight: bold;
+cursor: pointer;
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 ">×</span>
 
 <h3 style="
@@ -1664,3 +1663,4 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
