--- a/product.html
+++ b/product.html
@@ -527,7 +527,7 @@ font-weight:800;
 text-align:center;
 color:#222;
 ">
-💬 Place your order to any one of them !
+💬 Choose any one of them!
 </h3>
 
 <!-- Contact 1 -->
@@ -1663,4 +1663,5 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
