--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hairnic - Single Product Website Template</title>
+    <title>SAFA'z</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -400,7 +400,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <h2 class="mainHeading">Our Categories</h2>
 
   <div class="categoryRow">
-    <div class="categoryItem activeCat" onclick="showProducts('faceShiner',this)">Face Shiner</div>
+    <div class="categoryItem activeCat" onclick="showProducts('faceShiner',this)">Skin Care</div>
     <div class="categoryItem" onclick="showProducts('handFeet',this)">Hand & Feet Care</div>
     <div class="categoryItem" onclick="showProducts('serum',this)">Serum Collection</div>
     <div class="categoryItem" onclick="showProducts('eye',this)">Eye Collection</div>
@@ -527,7 +527,7 @@ font-weight:800;
 text-align:center;
 color:#222;
 ">
-💬 Choose any one of them!
+💬CHOOSE ANY ONE OF THEM!
 </h3>
 
 <!-- Contact 1 -->
@@ -1109,8 +1109,13 @@ let cart=[];
 
 const products={
 faceShiner:[
-{name:"Whitening Cream",img:"face1.jpg",price:950,original:1200},
-{name:"Skin Polish",img:"face2.jpg",price:720,original:900}
+{name:"Safa'z 24k Gold Oxidizing Skin Polish Large Pack
+1000ml Volune
+500 grams blonder powder",img:"s1.jpg",price:2999,original:3250},
+{name:"Skin Polish",img:"s2.jpg",price:720,original:900},
+    {name:"Skin Polish",img:"s3.jpg",price:720,original:900},
+    {name:"Skin Polish",img:"s4.jpg",price:720,original:900},
+    {name:"Skin Polish",img:"s5.jpg",price:720,original:900}
 ],
 handFeet:[
 {name:"Hand Cream",img:"hand1.jpg",price:640,original:800}
@@ -1663,6 +1668,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
