--- a/product.html
+++ b/product.html
@@ -1109,9 +1109,7 @@ let cart=[];
 
 const products={
 faceShiner:[
-{name:"Safa'z 24k Gold Oxidizing Skin Polish Large Pack
-1000ml Volune
-500 grams blonder powder",img:"s1.jpg",price:2999,original:3250},
+{name:"Safa'z 24k Gold Oxidizing Skin Polish Large Pack",img:"s1.jpg",price:2999,original:3250},
 {name:"Skin Polish",img:"s2.jpg",price:720,original:900},
     {name:"Skin Polish",img:"s3.jpg",price:720,original:900},
     {name:"Skin Polish",img:"s4.jpg",price:720,original:900},
@@ -1668,6 +1666,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
