--- a/product.html
+++ b/product.html
@@ -755,6 +755,7 @@ body{
   background:#ffca1a;
 }
 .productsContainer{
+    
   display:flex;
   flex-wrap:wrap;
   justify-content:center;
@@ -762,8 +763,8 @@ body{
   margin-top:30px;
 }
 .productCard{
-  width:100%;
-  max-width:220px;
+     width: calc(50% - 9px); /* Two products per row with some margin */
+    max-width: 220px; /* Keep your max width */
   border:2px solid #ffca1a;
   border-radius:15px;
   padding:15px;
@@ -1666,6 +1667,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
