--- a/product.html
+++ b/product.html
@@ -771,6 +771,7 @@ body{
   box-shadow:0 8px 20px rgba(0,0,0,0.08);
   transition:0.3s;
   background:#fffdf6;
+    font-size: 1.2rem; 
 }
 .productCard:hover{
   transform:translateY(-6px);
@@ -1667,6 +1668,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
