--- a/product.html
+++ b/product.html
@@ -771,8 +771,10 @@ body{
   box-shadow:0 8px 20px rgba(0,0,0,0.08);
   transition:0.3s;
   background:#fffdf6;
-    font-size: 0.4rem; 
+    font-size: 0.8rem; 
 }
+    .productCard .productName {
+    font-size: 0.9rem;}
 .productCard:hover{
   transform:translateY(-6px);
 }
@@ -1668,6 +1670,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
