--- a/product.html
+++ b/product.html
@@ -749,10 +749,12 @@ body{
   cursor:pointer;
   font-weight:700;
   transition:0.3s;
+     font-size: 0.9rem;
 }
 .categoryItem:hover,
 .activeCat{
   background:#ffca1a;
+    
 }
 .productsContainer{
     
@@ -761,6 +763,7 @@ body{
   justify-content:center;
   gap:5px;
   margin-top:30px;
+     font-size: 0.9rem;
 }
 .productCard{
      width: calc(50% - 9px); /* Two products per row with some margin */
@@ -773,7 +776,7 @@ body{
   background:#fffdf6;
     font-size: 0.8rem; 
 }
-    .productCard .productName {
+    .productCard .name {
     font-size: 0.9rem;}
 .productCard:hover{
   transform:translateY(-6px);
@@ -1670,6 +1673,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
