--- a/product.html
+++ b/product.html
@@ -785,6 +785,8 @@ body{
   width:100%;
   border-radius:12px;
   cursor:pointer;
+      font-size: 0.9rem;
+    
 }
 .originalPrice{
   text-decoration:line-through;
@@ -1673,6 +1675,7 @@ function buyNow(category,index,btn){
 </body>
 
 </html>
+
 
 
 
